--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
     "@types/crypto-js": "^4.0.1",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.0.0",
+    "jquery": "^3.6.0",
     "js-md5": "^0.7.3",
     "md5": "^2.3.0",
     "rxjs": "~6.6.0",
@@ -33,6 +35,7 @@
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
