--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,11 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "typeRoots": [
+    "./node_modules/@types"
+],  
+  "types": [
+    "jquery"
+  ]
 }
