--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@angular/core": "~12.0.2",
     "@angular/forms": "~12.0.2",
     "@angular/material": "^12.0.2",
+    "@angular/material-moment-adapter": "^12.0.3",
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ngx-translate/core": "^13.0.0",
     "@types/crypto-js": "^4.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.0.0",
     "jquery": "^3.6.0",
     "js-md5": "^0.7.3",
     "md5": "^2.3.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
