--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ngx-toastr/toastr.css" ,
               "src/styles.scss",
               "src/theme.scss"
             ],
