--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -25,6 +25,7 @@
     "@types/crypto-js": "^4.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.0.0",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "js-md5": "^0.7.3",
     "md5": "^2.3.0",
