--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,9 @@
             "styles": [
               "node_modules/ngx-toastr/toastr.css" ,
               "src/styles.scss",
-              "src/theme.scss"
+              "src/theme.scss",
+              "./node_modules/froala-editor/css/froala_editor.pkgd.min.css",
+              "./node_modules/froala-editor/css/froala_style.min.css"
             ],
             "scripts": [            ]
           },
