--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "~12.0.2",
     "@ngx-translate/core": "^13.0.0",
     "@types/crypto-js": "^4.0.1",
+    "angular-froala-wysiwyg": "^4.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "js-md5": "^0.7.3",
+    "mat-contenteditable": "^9.1.0",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "ngx-toastr": "^14.0.0",
