--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@kolkov/angular-editor": "^1.1.7",
     "@ngx-translate/core": "^13.0.0",
     "@types/crypto-js": "^4.0.1",
     "angular-froala-wysiwyg": "^4.0.1",
